apps/excalidraw/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
spec:
  selector:
    app: excalidraw
  ports:
    - name: http
      port: 80
      targetPort: 80
