apps/excalidraw/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalidraw
spec:
  ingressClassName: nginx
  rules:
    - host: excalidraw.jamaguchi.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: excalidraw
                port:
                  name: http
